--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,17 +1,19 @@
 .navbar {
   display: flex;
   align-items: center;
+  gap: 1.25rem;
 }
 
 .navbar h2 {
-  margin-right: 20px;
+  margin: 0;
 }
 
 .navbar-buttons {
   display: flex;
   align-items: center;
+  gap: 0.625rem;
 }
 
 .navbar-button {
-  margin-right: 10px;
+  margin: 0;
 }
