--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -1,17 +1,17 @@
 .login-container {
   text-align: center;
-  width: 300px;
-  margin: 50px auto;
+  width: 18.75rem;
+  margin: 3.125rem auto;
 }
 
 .login-form label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 0.3125rem;
 }
 
 .login-form input {
   width: 90%;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .toggle-button {
